trunk/Archive2/71/5a6009ef9cae81/output
main.cpp:8:10: error: no member named 'array' in namespace 'std'
    std::array<std::reference_wrapper<Foo>, 2> arr = { Foo(), Bar() };
    ~~~~~^
main.cpp:8:43: error: expected '(' for function-style cast or type construction
    std::array<std::reference_wrapper<Foo>, 2> arr = { Foo(), Bar() };
               ~~~~~~~~~~~~~~~~~~~~~~~~~~~^
main.cpp:8:48: error: use of undeclared identifier 'arr'
    std::array<std::reference_wrapper<Foo>, 2> arr = { Foo(), Bar() };
                                               ^
3 errors generated.
